--- a/articulo.html
+++ b/articulo.html
@@ -213,8 +213,8 @@ pre code {
 <div id="estado-del-arte" class="section level2">
 <h2>1.2. Estado del arte</h2>
 <p>(falta entero) buscar cosas de matlab, y otros softwares, y por supuesto de R.</p>
-<p>Un poco de autobombo: <span class="citation">(Cano et al. 2016)</span></p>
-<p>Citar R y paquetes: <span class="citation">(R Core Team 2021)</span>, <span class="citation">(Chang et al. 2021)</span>, …</p>
+<p>Un poco de autobombo: <span class="citation">[1]</span></p>
+<p>Citar R y paquetes: <span class="citation">[2]</span>, <span class="citation">[3]</span>, …</p>
 </div>
 </div>
 <div id="metodología" class="section level1">
@@ -222,7 +222,7 @@ pre code {
 <div id="material-y-métodos" class="section level2">
 <h2>2.1. Material y métodos</h2>
 <p>Para el desarrollo de las aplicaciones interactivas, utilizamos el software estadístico y lenguaje de programación R (<a href="https://www.r-project.org" class="uri">https://www.r-project.org</a>). R es desde hace años el estándar “de facto” para análisis de datos. No obstante, al ser también lenguaje de programación, sus posibilidades son ilimitadas, como demuestran los más de 18.000 paquetes desarrollados por la comunidad para una gran variedad de dominios de aplicación. Algunos paquetes constituyen auténticos “frameworks” para el desarrollo de aplicaciones, como es el caso del paquete “shiny” (<a href="https://shiny.rstudio.com" class="uri">https://shiny.rstudio.com</a>). Con shiny podemos desarrollar aplicaciones interactivas que se ejecutan en el navegador, sin necesidad de saber programar páginas web. Todo se genera mediante funciones de R de forma análoga a como se haría un análisis de datos.</p>
-<p>En este trabajo presentamos una aplicación para ilustrar la definición de probabilidad como frecuencia relativa en el límite. Un ejemplo clásico sería lanzar una moneda al aire repetidas veces y contar el número de caras que salen en una sucesión de n “experimentos.” La probabilidad de obtener cara sería, asintóticamente, el número de caras dividido entre el total de tiradas. Una actividad “manipulativa” podría consistir en poner a los estudiantes a lanzar monedas, anotar las caras y hacer los cálculos. Pero llevaría demasiado tiempo para un concepto básico.</p>
+<p>En este trabajo presentamos una aplicación para ilustrar la definición de probabilidad como frecuencia relativa en el límite. Un ejemplo clásico sería lanzar una moneda al aire repetidas veces y contar el número de caras que salen en una sucesión de n “experimentos”. La probabilidad de obtener cara sería, asintóticamente, el número de caras dividido entre el total de tiradas. Una actividad “manipulativa” podría consistir en poner a los estudiantes a lanzar monedas, anotar las caras y hacer los cálculos. Pero llevaría demasiado tiempo para un concepto básico.</p>
 <p>Los métodos y herramientas de Ciencia de Datos, como la simulación y el software estadístico R, nos permiten simular cualquier experimento aleatorio, un número grande de veces, y personalizando para cada dominio de aplicación.</p>
 <p>(expandir un poco)</p>
 </div>
@@ -244,15 +244,15 @@ pre code {
 </div>
 <div id="referencias" class="section level1 unnumbered">
 <h1 class="unnumbered">REFERENCIAS</h1>
-<div id="refs" class="references csl-bib-body hanging-indent">
+<div id="refs" class="references csl-bib-body">
 <div id="ref-Cano2016" class="csl-entry">
-Cano, E L, J Garzás, J M Moguerza, and N N Sánchez. 2016. <span>“Applying Scrum to Organise University Degrees Coursework.”</span> In <em>Edulearn16 Proceedings (8th International Conference on Education and New Learning Technologies)</em>, edited by L. Gómez Chova, A. López Martínez, and I. Candel Torres, 1684–85. IATED Academy.
-</div>
-<div id="ref-R-shiny" class="csl-entry">
-Chang, Winston, Joe Cheng, JJ Allaire, Carson Sievert, Barret Schloerke, Yihui Xie, Jeff Allen, Jonathan McPherson, Alan Dipert, and Barbara Borges. 2021. <em>Shiny: Web Application Framework for r</em>. <a href="https://shiny.rstudio.com/">https://shiny.rstudio.com/</a>.
+<div class="csl-left-margin">[1] </div><div class="csl-right-inline">Cano EL, Garzás J, Moguerza JM, et al. Applying scrum to organise university degrees coursework. In: Chova LG, Martínez AL, Torres IC (eds) <em>EDULEARN16 Proceedings (8th International Conference on Education and New Learning Technologies)</em>. IATED Academy, 2016, pp. 1684–1685.</div>
 </div>
 <div id="ref-R-base" class="csl-entry">
-R Core Team. 2021. <em>R: A Language and Environment for Statistical Computing</em>. Vienna, Austria: R Foundation for Statistical Computing. <a href="https://www.R-project.org/">https://www.R-project.org/</a>.
+<div class="csl-left-margin">[2] </div><div class="csl-right-inline">R Core Team. <em>R: A language and environment for statistical computing</em>. Vienna, Austria: R Foundation for Statistical Computing, <a href="https://www.R-project.org/">https://www.R-project.org/</a> (2021).</div>
+</div>
+<div id="ref-R-shiny" class="csl-entry">
+<div class="csl-left-margin">[3] </div><div class="csl-right-inline">Chang W, Cheng J, Allaire J, et al. <em>Shiny: Web application framework for r</em>, <a href="https://shiny.rstudio.com/">https://shiny.rstudio.com/</a> (2021).</div>
 </div>
 </div>
 </div>
